Added Comments to the Notebook

--- a/Week1/Linear Regression with Numpy.ipynb
+++ b/Week1/Linear Regression with Numpy.ipynb
@@ -4,13 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear Regression with `numpy`\n",
+    "# Linear Regression with `numpy`\n",
     "- [Why numpy over python](https://stackoverflow.com/questions/993984/why-numpy-instead-of-python-lists) ?"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading the dataset\n",
+    "\n",
+    "Before we can start working on our actual algorithms and models, we have to import our data in the correct format."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,15 +32,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sanity Checks\n",
+    "\n",
+    "So now that we've imported our data we can quickly check if the data has in fact been **loadd correctly.** \n",
+    "A *simple* way to do that would be to print the shape of the data we've imported. \n",
+    "\n",
+    "So these simple checks to ensure that bigger errors don't pop up later are called *sanity checks*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(100, 1)\n",
+      "(100, 8)\n",
       "(100, 1)\n"
      ]
     }
@@ -45,8 +66,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training Data and Testing Data\n",
+    "\n",
+    "When training an ML Model a best-practice is to split your available data into two sets. One for training and one for testing and evaluation. \n",
+    "\n",
+    "**Why?**\n",
+    "\n",
+    "If a model trains on a set of data and learns it's patterns well enough then it will obviously perform well on the same set of data. \n",
+    "\n",
+    "We should keep the sets mutually exclusive "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,18 +112,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training and Convergence\n",
+    "\n",
+    "All Machine Learning or Deep Learning models require training. Training is the phase in which your model/algorithm attempts to *learn* and *understand* the data that you've provided.\n",
+    "\n",
+    "The **learning rate** is the rate at which your algorithm learns the data. We'll get into detail about this later but for now we can just say that the learning rate should neither be too high, or too small for good training.\n",
+    "\n",
+    "**Convergence** occurs when you've *finished* training your data. Technically there's no way to define when training is done but in essence we define convergence to have occured when your weights don't change by some threshold value between two successive training iterations."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration: 100 - Error: 141.95809226800142\n",
-      "Iteration: 200 - Error: 139.91956148098575\n",
-      "Iteration: 300 - Error: 139.90711964911608\n",
-      "Iteration: 400 - Error: 139.9070437124752\n",
+      "Iteration: 100 - Error: 113.35754457226828\n",
+      "Iteration: 200 - Error: 111.52822837248205\n",
+      "Iteration: 300 - Error: 111.51988941729705\n",
       "Converged.\n"
      ]
     }
@@ -120,25 +168,32 @@
     "    iterations += 1\n",
     "    w = new_w"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
