Replaced latex formulae wih image

--- a/Week1/Linear Regression with Numpy.ipynb
+++ b/Week1/Linear Regression with Numpy.ipynb
@@ -164,7 +164,10 @@
     "L1-norm loss function is also known as least absolute deviations (LAD), least absolute errors (LAE). It is basically minimizing the sum of the absolute differences (S) between the target value (Yi) and the estimated values (f(xi)):\n",
     "\n",
     "The predicted value for given sample shall be (`y_estimate`):\n",
-    "<a href=\"https://www.codecogs.com/eqnedit.php?latex=\\begin{align*}&space;h(x_i)&space;=&space;(w^Tx_i)&space;&plus;&space;b&space;\\label{eq:model_los}&space;\\end{align*}\" target=\"_blank\"><img src=\"https://latex.codecogs.com/gif.latex?\\begin{align*}&space;h(x_i)&space;=&space;(w^Tx_i)&space;&plus;&space;b&space;\\label{eq:model_los}&space;\\end{align*}\" title=\"\\begin{align*} h(x_i) = (w^Tx_i) + b \\label{eq:model_los} \\end{align*}\" /></a>\n",
+    "\\begin{align*}\n",
+    " h(x_i) = (w^Tx_i) + b\n",
+    "\\label{eq:model_los}\n",
+    "\\end{align*}\n",
     "\n",
     "Error between predicted output and actual output:\n",
     "\\begin{align*}\n",
