--- a/Week1/Linear Regression with Numpy.ipynb
+++ b/Week1/Linear Regression with Numpy.ipynb
@@ -163,38 +163,7 @@
     "We use the Euclidean distance between predicted values and ground truth values as the error function.\n",
     "L1-norm loss function is also known as least absolute deviations (LAD), least absolute errors (LAE). It is basically minimizing the sum of the absolute differences (S) between the target value (Yi) and the estimated values (f(xi)):\n",
     "\n",
-    "The predicted value for given sample shall be (`y_estimate`):\n",
-    "\\begin{align*}\n",
-    " h(x_i) = (w^Tx_i) + b\n",
-    "\\label{eq:model_los}\n",
-    "\\end{align*}\n",
-    "\n",
-    "Error between predicted output and actual output:\n",
-    "\\begin{align*}\n",
-    "  & L(y,h(x)) = \\sum_{i=0}^n \\big|y_i - h(x_i)\\big|^2\n",
-    "\\end{align*}\n",
-    "<br/>\n",
-    "\n",
-    "This can be written as (`error`):\n",
-    "\\begin{gather}\n",
-    " L(y,x,w) = \\dfrac{1}{n} \\sum_{i=1}^{n} \\big|\\hat{y}_i- (w^Tx_i + b)\\big|^2\n",
-    "\\label{eq:model_loss}\n",
-    "\\end{gather}\n",
-    "<br/>\n",
-    "On differentiating with respect to weight (`weight_gradient`)\n",
-    "\n",
-    "\\begin{gather}\n",
-    "\\label{eq:dl_dw}\n",
-    "\\dfrac{\\partial\\mathcal{L}(y,x,w)}{\\partial w} = -\\dfrac{1}{M} \\sum_{i=1}^{M} 2x_i\\big(\\hat{y}_i - (w^Tx_i+b)\\big)\n",
-    "\\end{gather}\n",
-    "<br/>\n",
-    "On differentiating with respect to bias (`bias_gradient`)\n",
-    "\\begin{gather}\n",
-    "\\label{eq:dl_db}\n",
-    "\\dfrac{\\partial\\mathcal{L}(y,x,w)}{\\partial b} = -\\dfrac{1}{M} \\sum_{i=1}^{M} 2\\big(\\hat{y}_i - (w^Tx_i+b)\\big)\n",
-    "\\end{gather}\n",
-    "\n",
-    "Where, M = No. of training examples."
+    "![Formulae](http://vishalgupta.me/IntroML/Week1/formulae.png)"
    ]
   },
   {
@@ -236,15 +205,7 @@
     "## Gradient Descent\n",
     "One of the methods we can use to minimize the error is Gradient Descent, which is based on using gradients to update the model parameters (w in our case) until a minimum is found and the gradient becomes zero. Convergence to the global minimum is guaranteed (with some reservations) for convex functions since that’s the only point where the gradient is zero. \n",
     "\n",
-    "\\begin{gather}\n",
-    "\\label{eq:dl_dw}\n",
-    "\\dfrac{\\partial L(y,x,w)}{\\partial w} = -\\dfrac{1}{n} \\sum_{i=1}^{n} x_i\\\\\n",
-    "\\end{gather}\n",
-    "\n",
-    "\\begin{gather}\n",
-    "w = w - \\alpha \\dfrac{\\partial L(y,x,w)}{\\partial w}\\\\\n",
-    "\\end{gather}\n",
-    "\n",
+    "![Formulae](http://vishalgupta.me/IntroML/Week1/formulae2.png)\n",
     "Here, alpha is the learning rate.\n",
     "\n",
     "The algorithm works by evaluating the gradients and updating the parameters at each iteration until the gradient becomes zero."
