--- a/Week2/Logistic Regression with Numpy.ipynb
+++ b/Week2/Logistic Regression with Numpy.ipynb
@@ -1665,7 +1665,7 @@
     "**Testing** accuracy of **96.67 %**.\n",
     "\n",
     "So we haven't really done all that bad. But we still have to get to concepts like overfitting and also understand that the amount of data we have is very little so that's pretty much why our model performed so *\"well\"*.<br>\n",
-    "And hopefully you understand why the training accuracy turned out so high when in fact the model performed well enough in the testing set.\n",
+    "And hopefully you understand why the training accuracy turned out so low when in fact the model performed well enough in the testing set.\n",
     "\n",
     "As usual message us on Slack with any questions or reach out to: <br> \n",
     "me at shreyas.gopal.ind@gmail.com or <br>\n",
