Update Logistic Regression with Numpy.ipynb

--- a/Week2/Logistic Regression with Numpy.ipynb
+++ b/Week2/Logistic Regression with Numpy.ipynb
@@ -1660,7 +1660,7 @@
     "\n",
     "Hence our model has:\n",
     "\n",
-    "**Non-normalized** training error of **23.82 %**.\n",
+    "**Non-normalized** training error of **23.82 points**.\n",
     "<br>\n",
     "**Testing** accuracy of **96.67 %**.\n",
     "\n",
