Update Logistic Regression with Numpy.ipynb

--- a/Week2/Logistic Regression with Numpy.ipynb
+++ b/Week2/Logistic Regression with Numpy.ipynb
@@ -1368,7 +1368,7 @@
     "\n",
     "After 42300 iterations we can see that the model has *converged*. But why is the training error so high?\n",
     "\n",
-    "It's **23.8200 %** as can be seen.\n",
+    "It's **23.8200 points** as can be seen.\n",
     "But why is it that high? \n",
     "\n",
     "**So we admit it we cheated a little bit**. Since we're having 3 possible classes for prediction we should technically use an activation function that balances the probability such that the total sum of the probabalities for each class together would be 1. \n",
