--- a/Week3/Introduction to Neural Networks.ipynb
+++ b/Week3/Introduction to Neural Networks.ipynb
@@ -53,8 +53,19 @@
    "source": [
     "### Hidden Layers\n",
     "\n",
-    "You'll notice that the "
+    "You'll notice that in the neural network one of the main differences is that the network has multiple layers of these inputs and not just the one for input and output.\n",
+    "\n",
+    "These layers between the input and the output layers are called **hidden layers**. These hidden layers are the magical reason neural networks work as well as they do in real-world applications.\n",
+    "\n",
+    "Essentially the hidden layers allow to complicate or add a degree of non-linearity to the function that the network is trying to replicate. The basic point of any model is to attempt to find a function that generates the distribution of data provided to the model as training data in the hope that any other data provided will also be correlated correctly with the same function. Hence adding hidden layers tends to increase the flexibility of the function or increases the degree to which the function we're trying to predict strays from forming lines and making simpler binary decisions."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
