--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,11 +28,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = get_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 0.,  0.,  1., ..., 16., 13.,  3.],\n",
+       "        [ 0.,  0.,  9., ...,  3.,  0.,  0.],\n",
+       "        [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "        ...,\n",
+       "        [ 0.,  0.,  4., ...,  0.,  0.,  0.],\n",
+       "        [ 0.,  0., 12., ..., 15.,  6.,  0.],\n",
+       "        [ 0.,  0.,  4., ...,  0.,  0.,  0.]]),\n",
+       " array([[ 0.,  0.,  4., ...,  8.,  0.,  0.],\n",
+       "        [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "        [ 0.,  0.,  7., ..., 11.,  3.,  0.],\n",
+       "        ...,\n",
+       "        [ 0.,  1., 15., ..., 16., 16.,  5.],\n",
+       "        [ 0.,  0.,  1., ..., 12.,  7.,  0.],\n",
+       "        [ 0.,  0.,  7., ...,  5.,  0.,  0.]]),\n",
+       " array([3, 0, 7, ..., 8, 9, 7]),\n",
+       " array([0, 4, 3, 8, 4, 1, 5, 3, 5, 6, 7, 6, 2, 9, 3, 1, 4, 7, 9, 4, 5, 4,\n",
+       "        1, 3, 5, 5, 9, 6, 7, 4, 2, 2, 3, 5, 1, 9, 6, 0, 6, 8, 6, 0, 5, 4,\n",
+       "        1, 4, 5, 7, 6, 9, 5, 8, 4, 4, 9, 5, 0, 0, 9, 1, 4, 6, 0, 9, 2, 1,\n",
+       "        5, 6, 1, 8, 3, 6, 4, 9, 5, 7, 7, 4, 9, 7, 0, 1, 7, 6, 1, 9, 5, 9,\n",
+       "        0, 4, 2, 4, 2, 4, 6, 2, 6, 9, 6, 3, 8, 7, 1, 4, 6, 1, 3, 6, 2, 5,\n",
+       "        9, 8, 6, 8, 5, 8, 0, 6, 3, 7, 8, 1, 3, 2, 8, 3, 8, 2, 7, 4, 6, 9,\n",
+       "        2, 6, 1, 9, 0, 9, 5, 7, 7, 1, 0, 2, 8, 6, 1, 5, 8, 5, 3, 2, 1, 2,\n",
+       "        7, 8, 2, 0, 8, 7, 9, 4, 2, 5, 7, 2, 0, 0, 3, 2, 1, 1, 3, 7, 1, 4,\n",
+       "        7, 6, 2, 8, 3, 9, 6, 3, 5, 3, 2, 4, 3, 9, 7, 0, 7, 9, 5, 7, 9, 2,\n",
+       "        0, 5, 5, 7, 9, 7, 2, 0, 7, 2, 4, 4, 3, 4, 0, 0, 3, 3, 1, 9, 3, 2,\n",
+       "        2, 3, 0, 7, 7, 8, 9, 5, 0, 1, 3, 6, 2, 0, 1, 9, 2, 6, 9, 8, 7, 7,\n",
+       "        2, 0, 0, 2, 8, 9, 8, 1, 5, 4, 1, 0, 8, 1, 8, 1, 2, 1, 6, 6, 4, 3,\n",
+       "        4, 2, 6, 0, 6, 4, 5, 4, 1, 3, 2, 1, 1, 1, 7, 3, 9, 1, 7, 3, 1, 8,\n",
+       "        7, 6, 6, 3, 6, 3, 7, 7, 0, 7, 6, 3, 1, 5, 7, 9, 2, 8, 8, 9, 4, 8,\n",
+       "        9, 4, 5, 0, 8, 8, 0, 3, 4, 1, 8, 7, 9, 7, 6, 8, 3, 0, 5, 7, 1, 0,\n",
+       "        2, 0, 9, 5, 9, 0, 1, 2, 6, 5, 2, 3, 3, 8, 5, 3, 8, 4, 2, 1, 9, 7,\n",
+       "        7, 6, 5, 1, 9, 2, 6, 8]))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_data()"
    ]
   },
   {
